test/Tests/VertexInput/Overlap.golden

test\Tests\VertexInput\Overlap.hs:55:5: error:
    * Overlap at location 1, component 0:
        - V 4 Double based at location 0, component 0,
        - V 4 Float based at location 1, component 0.
    * In the expression:
        withStructInput @VertexInput @(Triangle List)
          $ StartPipeline :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = withStructInput @VertexInput @(Triangle List)
                $ StartPipeline :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
55 |   = withStructInput @VertexInput @(Triangle List)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\VertexInput\Overlap.hs:55:5: error:
    * Overlap at location 1, component 0:
        - V 4 Double based at location 0, component 0,
        - V 4 Float based at location 1, component 0.
    * In the expression:
        withStructInput @VertexInput @(Triangle List)
          $ StartPipeline :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = withStructInput @VertexInput @(Triangle List)
                $ StartPipeline :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
55 |   = withStructInput @VertexInput @(Triangle List)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
